--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,10 @@ body {
     justify-content: space-between;
     list-style-type: none;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin: 20px 0;
     border-radius: 10px;
+    box-shadow: 1px 1px 1px 1px lightgray;
 }
 
 .task-container.color-0 {
